[package]
name = "akhashic-record"
version = "0.1.0"
authors = ["XDA-7 <xaraxsaren@hotmail.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "chunk_writer",
    "crc",
    "fractals",
    "image",
    "lz77",
    "lzw",
    "zlib",
]

[dependencies]

fractals = { path = "fractals" }
image = { path = "image" }
chunk_writer = { path = "chunk_writer" }
lzw = { path = "lzw" }